# holys3

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  SECURITY.md  _typos.toml  deny.toml  docker-compose.bench.yml  release-plz.toml
.config/: nextest.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bench.yml  ci.yml  fuzz.yml  release-assets.yml  release-plz.yml  release.yml  security.yml
benches/: baseline.json
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: discover.rs  index.rs  json.rs  main.rs  patterns.rs  printer.rs  progress.rs  scope.rs
crates/cli/tests/: cli.rs  live_index.rs  watch.rs
crates/core/: Cargo.toml
crates/core/src/: cache.rs  codec.rs  grams.rs  grep.rs  lib.rs  pattern.rs  progress.rs  store.rs  testutil.rs
crates/core/src/codec/: body.rs  compressed.rs  detect.rs  tabular.rs
crates/index/: Cargo.toml
crates/index/benches/: hot_paths.rs
crates/index/benches/fixtures/: sample.txt
crates/index/src/: build.rs  candidate.rs  eval.rs  format.rs  lib.rs  pack.rs  remote_terms.rs  search.rs  segment.rs  sparse_table.rs  terms.rs
crates/index/src/search/: mod.rs  plan.rs  verify.rs
crates/index/src/segment/: cache.rs  compact.rs
crates/index/tests/: common.rs  differential.rs  differential_store.rs  segmented.rs  sparse_remote.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/s3/: Cargo.toml
crates/s3/src/: cache.rs  client.rs  creds.rs  fetch.rs  lib.rs  sso.rs
crates/s3/src/client/: download.rs  upload.rs
crates/s3/tests/: live_s3.rs
crates/sigv4/: Cargo.toml
crates/sigv4/src/: lib.rs
crates/xbench/: Cargo.toml  README.md
crates/xbench/runs/: churn.json  latest.json  minio.json  s3.json
crates/xbench/scenarios/: queries.toml
crates/xbench/src/: churn.rs  gen.rs  main.rs  scenarios.rs
docs/superpowers/notes/: 2026-06-02-dict-bakeoff.md
docs/superpowers/plans/: 2026-06-01-holys3-stage1.md  2026-06-02-holys3-stage2.md  2026-06-02-holys3-stage3a.md  2026-07-10-index-performance.md  2026-07-10-launch-hardening.md  2026-07-10-logical-documents-formats.md  2026-07-10-s3-transport-cache.md  2026-07-11-continuous-indexing.md  2026-07-20-multi-pattern-regional-search.md
docs/superpowers/specs/: 2026-06-01-holys3-design.md  2026-07-10-holys3-engine-expansion-design.md  2026-07-10-s3grep-engine-expansion-design.md  2026-07-11-continuous-indexing-design.md  2026-07-20-multi-pattern-regional-search-design.md
scripts/rg-parity/: README.md  build_fixtures.py  run.py
skills/seagrep/: SKILL.md
