[package]
name = "seagrep"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Indexed regex search for private S3 buckets"
keywords = ["s3", "grep", "regex", "search", "trigram"]
categories = ["command-line-utilities", "text-processing"]
readme = "../../README.md"

[[bin]]
name = "seagrep"
path = "src/main.rs"

[features]
dhat-heap = ["dep:dhat"]

[dependencies]
seagrep-core = { path = "../core", version = "0.9.0" }
seagrep-index = { path = "../index", version = "0.9.0" }
seagrep-query = { path = "../query", version = "0.9.0" }
seagrep-s3 = { path = "../s3", version = "0.9.0" }
anyhow.workspace = true
base64 = "0.22.1"
globset = "0.4.18"
mimalloc = { version = "0.1.52", features = ["no_thp"] }
bytes.workspace = true
clap.workspace = true
indicatif.workspace = true
ctrlc = { version = "3.5.2", features = ["termination"] }
dhat = { version = "0.3.3", optional = true }
regex.workspace = true
regex-syntax.workspace = true
serde.workspace = true
tempfile.workspace = true
serde_json.workspace = true
termcolor = "1.4.1"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
