[package]
name = "holys3-core"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
regex.workspace = true
rapidhash = "4.4.1"
memchr = "2.8.1"
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }
zstd = "0.13.3"
bzip2 = "0.6.1"
snap = "1.1.1"
lz4_flex = "0.13.1"
liblzma = "0.4.6"
bytes = "1"
parquet = { version = "59.0.0", default-features = false, features = ["arrow", "snap", "zstd", "flate2", "flate2-zlib-rs", "lz4", "brotli"] }
arrow-json = "59.0.0"
arrow-schema = "59.0.0"
apache-avro = { version = "0.21.0", features = ["snappy", "zstandard"] }
serde_json.workspace = true
arrow-array = { version = "59.0.0", optional = true }

[dev-dependencies]
arrow-array = "59.0.0"

[features]
testutil = ["dep:arrow-array"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
