[package]
name = "s3grep-bench"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Benchmark harness for s3grep"
keywords.workspace = true
categories.workspace = true
publish = false

[[bin]]
name = "s3grep-bench"
path = "src/main.rs"

[dependencies]
s3grep-core = { path = "../core", version = "0.6.0" }
s3grep-index = { path = "../index", version = "0.6.0" }
s3grep-s3 = { path = "../s3", version = "0.6.0" }
anyhow.workspace = true
mimalloc = "0.1.52"
clap.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
